# set_mysql_binds

./: CMakeLists.txt
include/: BindsArray.hpp  binds.hpp  createDBTableBinds.h  getDBTables.h  makeBinds.hpp  makeVec.h  set_mysql_binds.h  setcolor.hpp  sqlTypes.hpp  traits.h  typeCreationStrings.h  utilities.h  valTypes.h
include/SqlTypes/: InputCType.hpp  OutputCType.hpp  SqlCType.h  SqlTypes.h
src/: SqlTypes.cpp  createDBTableBinds.cpp  getDBTables.cpp  set_mysql_binds.cpp  utilities.cpp
